--- a/aboutme/wwr/site-plan-rafting.html
+++ b/aboutme/wwr/site-plan-rafting.html
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Provide quality content and good information based on good sources, good texts that have clear content on the subject of information, such as reputable newspapers and good books on the market.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>This information will be given to all types of public of different ages to know how it is in a proper place in this part of this country.</p>
     <!-- change this -->
 
     <hr />
