--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -7,6 +7,14 @@
     <title>All About Me</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a id="active" href="http://index.html">Home</a>
+            <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
+            <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
+        </nav>
+    </header>
     <h1>About Me</h1>
     <img src="images/martin.jpg" alt="Mat">
     <h2>Martin Pasco</h2>
@@ -16,6 +24,6 @@
     <p>I currently live in Miami and I am dedicated to continue my studies and get a bachelor's degree in computer science and I enjoy learning new things.</p>
     <p>I have been a member for over 20 years and am currently the first counselor in the north miami beach ward, I enjoy it because I learn more with the spirit than with the things of the world.</p>
 
-    <p>That is a new para</p>
+    <p class='main-para'>That is a new para</p>
 </body>
 </html>
