--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
 <nav>
-  <a href="aboutme/index.html">About Me Page</a>             
-  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a id="active" href="aboutme/index.html">About Me Page</a>             
+  <a id="active1" href="wwr/index.html">White Water Rafting Website</a>
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 
 </nav>
-    <p> Martin Pasco  -  WDD 130</p>
+    <p class='main-para'> Martin Pasco  -  WDD 130</p>
     <P>  9/23/2022  </P>
 
 </body>
