--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -58,14 +58,14 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
+            <a href="https://facebook.com"></a>
+                <a><img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
+            <a href="https://twitter.com"></a>
+                <a><img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
+            <a href="https://instagram.com"></a>
+                <a><img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
