--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -12,10 +12,10 @@
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="index.html" target="_blank">Home</a>
             <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
+            <a href="contactus.html" target="_blank">Contact Us</a>
         </nav>
     </header>
     <div id="hero">
@@ -58,13 +58,13 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com"></a>
+            <a href="https://facebook.com" target="_blank"></a>
                 <a><img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com"></a>
+            <a href="https://twitter.com" target="_blank"></a>
                 <a><img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com"></a>
+            <a href="https://instagram.com" target="_blank"></a>
                 <a><img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
