--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -56,7 +56,7 @@
     <footer>
         <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href="contactus.html" target="_blank">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank"></a>
                 <a><img src="images/facebook.png" alt="fb icon">
