--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -58,14 +58,14 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html" target="_blank">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com" target="_blank"></a>
-                <a><img src="images/facebook.png" alt="fb icon">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com" target="_blank"></a>
-                <a><img src="images/twitter.png" alt="twitter icon">
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com" target="_blank"></a>
-                <a><img src="images/instagram.png" alt="instagram icon">
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
