--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -56,7 +56,7 @@
     </main>
     <footer>
         <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href=" site-plan-rafting.html" target="_blank">Site Plan</a></p>
         <p><a href="contactus.html" target="_blank">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
