--- a/aboutme/wwr/example1.html
+++ b/aboutme/wwr/example1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>BYUI</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles1.css">
 </head>
 <body>
     <header>
