--- a/aboutme/wwr/index.html
+++ b/aboutme/wwr/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <header>
-        <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
-        </a>
-        <nav>
-            <a href="index.html" target="_blank">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
-            <a href="contactus.html" target="_blank">Contact Us</a>
-        </nav>
+        <div id="contenido">
+            <a id="logo_link" href="index.html">
+                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            </a>
+            <nav>
+                <a href="index.html" target="_blank">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
+                <a href="contactus.html" target="_blank">Contact Us</a>
+            </nav>
+        </div>
     </header>
     <div id="hero">
         <div id="hero-box">
@@ -51,7 +53,7 @@
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html target="_blank">Join Us</a>
+            <a class='join' href="rivers.html" target="_blank">Join Us</a>
         </section>
     </main>
     <footer>
