--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All About Me</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>About Me</h1>
-    <img src="images/martin.jpg" alt="Mat">
-    <h2>Martin Pasco</h2>
-    <h2>Mat</h2>
-    <p>Hello, I'm Martin Pasco, my colleagues call me Mat because there are 2 others with the same name, it seems like a common name, etc.</p>
-    <p>I went back to school after 5 years, I worked as a math teacher and some programming, now I live in Miami and work in Logistics at Fox Renta a Autos.</p>
-    <p>I currently live in Miami and I am dedicated to continue my studies and get a bachelor's degree in computer science and I enjoy learning new things.</p>
-    <p>I have been a member for over 20 years and am currently the first counselor in the north miami beach ward, I enjoy it because I learn more with the spirit than with the things of the world.</p>
+    <h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a id="active" href="aboutme/index.html">About Me Page</a>             
+  <a id="active1" href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
 
-    <p>That is a new para</p>
+</nav>
+    <p class='main-para'> Martin Pasco  -  WDD 130</p>
+    <P>  9/23/2022  </P>
+
 </body>
 </html>
