--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="content">
+         <div id="content">
             <a id="logo_link" href="index.html">
                 <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
@@ -49,6 +49,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
