--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">#77BFA3</td><td class="secondary">[#98C9A3]</td><td class="accent1">[#BFD8BD]</td><td class="accent2">[#F9DF74]</td></tr>
+        <tr><td class="primary">[#77BFA3]</td><td class="secondary">[#98C9A3]</td><td class="accent1">[#BFD8BD]</td><td class="accent2">[#F9DF74]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
