--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="images/page2.jpg" alt="page 2 wireframe">
+    <img src="https://wireframe.cc/pro/pp/d697c1c4d598392" alt="page 2 wireframe">
   </main>
 </body>
 
