--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -87,7 +87,7 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
+        <a href="site-plan.html">Home</a>
         <a href="#">Page2</a>
         <a href="#">Page3</a>
       </nav>
@@ -125,7 +125,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+         They will come to visit my website because they have the recommendation of other people and they know that I have good services
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
@@ -134,7 +134,12 @@
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        The questions you expect is:<br>
+        What offer programs are there?<br>
+        What requirements are needed to travel to a certain country.<br>
+        The covid vaccine is necessary.<br>
+        There are tickets on offer<br>
+<br>
       </p>
       <p>Images for the Page 2</p>
         <img src="#" alt="image for page">
