--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -128,8 +128,8 @@
          They will come to visit my website because they have the recommendation of other people and they know that I have good services
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/umbrela.jpg" alt="image for homepage">
+        <img src="images/number1.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -142,8 +142,8 @@
 <br>
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/tickets.png" alt="image for page">
+        <img src="images/passport.png" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
