--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="site-plan.html">site-plan</a>    
+  <a href="traveling/site-plan.html">site-plan</a>    
 
 </nav>
     <p class='main-para'> Martin Pasco  -  WDD 130</p>
