--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="site-plan.html">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">GET TO KNOW PERU</a>
+        <a href="#">INTERNATIONAL DESTINATIONS</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          GET TO KNOW PERU <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          INTERNATIONAL DESTINATIONS  <!-- change this -->
         </div>
 
         <div class="top">
