--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -97,7 +97,7 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          HOME
         </div>
         <div class="sm-page2">
           GET TO KNOW PERU <!-- change this -->
