--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -87,7 +87,7 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="site-plan.html">Home</a>
+        <a href="site-plan.html">HOME</a>
         <a href="#">GET TO KNOW PERU</a>
         <a href="#">INTERNATIONAL DESTINATIONS</a>
       </nav>
