--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -97,13 +97,13 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          HOME
+          Home
         </div>
         <div class="sm-page2">
-          GET TO KNOW PERU <!-- change this -->
+          Get to Know Peru <!-- change this -->
         </div>
         <div class="sm-page3">
-          INTERNATIONAL DESTINATIONS  <!-- change this -->
+          Internationals Destinations  <!-- change this -->
         </div>
 
         <div class="top">
@@ -132,7 +132,7 @@
         <img src="images/number1.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Get to Know Peru</h3>
       <p>
         The questions you expect is:<br>
         What offer programs are there?<br>
@@ -146,7 +146,7 @@
         <img src="images/passport.png" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Internationals Destinations</h3>
       <p>
         [Written copy for the Page 3 here]
       </p>
