--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -151,8 +151,8 @@
         [Written copy for the Page 3 here]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/europa.png" alt="Europe">
+        <img src="images/Egypt.png" alt="Egypt">
 
       </ul>
       <hr>
