--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -168,13 +168,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Get to Know Peru</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Internationals Destinations</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
