--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -166,13 +166,13 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home.jpg" alt="home page wireframe">
 
       <h3>Get to Know Peru</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/page2.jpg" alt="page 2 wireframe">
 
       <h3>Internationals Destinations</h3>
       <p>         
