--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -125,7 +125,12 @@
       </h2>
       <h3>Home page</h3>
       <p>
-         They will come to visit my website because they have the recommendation of other people and they know that I have good services
+        We are a Travel and Tourism Agency with more than 30 years in the tourism field specialized in the sale of Air Tickets, National and International land, tourist programs of Peru, and all International destinations such as North America, the Middle East and Europe.
+        Provide the best tourist services in the market, exceeding the expectations of our clients and minimizing the impacts that affect the environment (saving energy and recycling). Personalized attention, good communication and speed in our services are three important pillars to fulfill this mission.
+        
+        People with extensive experience and excellent disposition for work. Teamwork is one of our mottos and our work engine.
+        At NYM Travel Agency we offer the sale of tourist circuits in Peru, Europe, the East, the Middle East, the Caribbean and more. In addition, programs for South America, North America, Central America, among others.
+        We work with a range of direct National and International Tour Operators, segmented into school groups, University students, Christian Pilgrimages, Cruises, Group Outings for the Elderly, Business and Tourism Trips for all people, having the best agreements to be able to give our clients the best proposal and we offer personalized attention. We have competitive rates, adapting to the requirements of our customers.
       </p>
       <p>Images for the Home page</p>
         <img src="images/umbrela.jpg" alt="image for homepage">
@@ -134,11 +139,13 @@
       </ul>
       <h3>Get to Know Peru</h3>
       <p>
-        The questions you expect is:<br>
-        What offer programs are there?<br>
-        What requirements are needed to travel to a certain country.<br>
-        The covid vaccine is necessary.<br>
-        There are tickets on offer<br>
+        Our mission is to make our customers' dreams of traveling come true, exceeding their expectations by completely satisfying their needs. In addition, we contribute to the development of Peru by promoting receptive and internal tourism that helps to love our country more.
+
+We offer the best places to go on vacation around the world. And book your trip easily, quickly and safely.
+
+We know that our clients will come to visit my website because they have the recommendation of other people and they know that I have good services, where they will be able to solve all their questions that they have for their trip and see the daily offer programs.
+Getting advice on all the requirements you need to travel to a certain country. And also everything you need to know regarding the covid vaccine for your trip.
+We offer you tickets on offer and in this way program your activities to know the details of the programs of national and international places, see the exchange rate, especially the security of the place.
 <br>
       </p>
       <p>Images for the Page 2</p>
@@ -148,7 +155,14 @@
       </ul>
       <h3>Internationals Destinations</h3>
       <p>
-        [Written copy for the Page 3 here]
+        We have a specialized staff in their field that facilitates them via on-line so that they can quote their air tickets, see the exchange rate, hotel accommodation, transportation, and activities that they can carry out in the place of travel that they choose, and for this they have the option of communication 24 hours a day, leave your message by email and also the online chat and we have the support of our national and international client portfolio.
+
+We also maintain business ethics and promote human development, we care about the working conditions and the health of all our employees.
+We also carry out social works in Lima and the province and collaborate with other social aid entities.
+
+For NYM TRAVEL AGENCY, its workers are its most important capital, so it considers prevention and the protection of their health and safety to be essential and a priority. Therefore, it provides them with an adequate work environment; maintains a solid health and safety management system; establishes an adequate culture of prevention and protection against labor risks, accidents, incidents and professional or occupational illnesses -for which it also has an Occupational Health and Safety Committee made up of the workers themselves-; and fully complies with current legislation on safety and health at work.
+
+That is why day by day we strive to do a good job and above all that a satisfied customer gives us great joy because that way we get more recommendations.
       </p>
       <p>Images for the Page 3</p>
         <img src="images/europa.png" alt="Europe">
