--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -133,8 +133,8 @@
         We work with a range of direct National and International Tour Operators, segmented into school groups, University students, Christian Pilgrimages, Cruises, Group Outings for the Elderly, Business and Tourism Trips for all people, having the best agreements to be able to give our clients the best proposal and we offer personalized attention. We have competitive rates, adapting to the requirements of our customers.
       </p>
       <p>Images for the Home page</p>
-        <img src="images/cusco.jpeg" alt="image for homepage">
-        <img src="images/sunset.png" alt="image for homepage">
+        <img src="images/tickets.png" alt="image for homepage">
+        <img src="images/passport.png" alt="image for homepage">
 
       </ul>
       <h3>Get to Know Peru</h3>
@@ -149,8 +149,8 @@ We offer you tickets on offer and in this way program your activities to know th
 <br>
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/tickets.png" alt="image for page">
-        <img src="images/passport.png" alt="image for page">
+        <img src="images/cusco.jpeg" alt="image for page">
+        <img src="images/cayac.png" alt="image for page">
 
       </ul>
       <h3>Internationals Destinations</h3>
