--- a/traveling/site-plan.html
+++ b/traveling/site-plan.html
@@ -87,9 +87,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="site-plan.html">HOME</a>
-        <a href="#">GET TO KNOW PERU</a>
-        <a href="#">INTERNATIONAL DESTINATIONS</a>
+        <a href="site-plan.html">Home</a>
+        <a href="#">Get to Know Peru</a>
+        <a href="#">Internationals Destinations</a>
       </nav>
       <hr>
       <h2>
