--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -23,38 +23,39 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="images/river.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry  Oar </h4>
+            <h1 class="home-title">River Adventures</h1>
+            <h4>Dry Oar is the solution</h4>
             <div class='button-box'>
                 <a class='book' href="contactus.html">Book Now</a>
             </div>   
         </section>
     </div>
-    <main class="home-grid">
-        <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
+    <main class="river-grid">
+        <section class="level-one">
+            <img class="card-img1" src="images/family.jpg" alt="river in forest">
+            <h3>River Adventures Beginning </h3>
+            <h5> The best adventure for the whole family and in general for those who first come to see a river</h5>
         </section>
-        <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
+        <section class="level-two">
+            <img class="card-img1" src="images/level3.jpg" alt="tent in mountains">
+            <h3>Intermedio -Rapids - Level III - IV</h3>
+            <h5> More adventures for the people that want have more experience in this beautiful adventure</h5>
         </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
+        <section class="level-three1">
+            <img class="card-img1" src="images/level5.jpg" alt="rafting boat">
+            <h3> Experts- Rapids - Level V - VI</h3>
+            <h5> For more adrenaline, the upper levels are the best, try it and you will not want to leave the river.</h5>
+            
         </section>
-        <div id="background"></div>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
+        <div id="background1"></div>
+        <img class="mountains1" src="images/salmon.jpg" alt="Misty mountains">
+        <section class="msg1">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html" target="_blank">Join Us</a>
+            <!--<a class='join1' href="rivers.html" target="_blank">Join Us</a> -->
         </section>
     </main>
     <footer>
