--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -53,8 +53,10 @@
         <div id="background1"></div>
         <img class="mountains1" src="images/salmon.jpg" alt="Misty mountains">
         <section class="msg1">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <h2>More Than Just The Adventure</h2>
+            <p>Enjoy the breathtaking scenery in all moment, From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. 
+                and the rapids of differents levels, make a different experences for all people, all levels, for all family.
+                This is a unique oportunity for enjoy time in family of some different activities for all levels and all ages  </p>
             <!--<a class='join1' href="rivers.html" target="_blank">Join Us</a> -->
         </section>
     </main>
