--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -56,7 +56,7 @@
             <h2>More Than Just The Adventure</h2>
             <p>Enjoy the breathtaking scenery in all moment, From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. 
                 and the rapids of differents levels, make a different experences for all people, all levels, for all family.
-                This is a unique oportunity for enjoy time in family of some different activities for all levels and all ages  </p>
+                This is a unique oportunity for enjoy time in family of some different activities for all levels and all ages <br> Enjoy the breathtaking scenery in all moment, From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. and the rapids of differents levels, make a different experences for all people, all levels, for all family. This is a unique oportunity for enjoy time in family of some different activities for all levels and all ages </p>
             <!--<a class='join1' href="rivers.html" target="_blank">Join Us</a> -->
         </section>
     </main>
