--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -35,17 +35,17 @@
     </div>
     <main class="river-grid">
         <section class="level-one">
-            <img class="card-img1" src="images/family.jpg" alt="river in forest">
+            <img class="card-img1" src="images/family_400x400.jpg" alt="river in forest">
             <h3>River Adventures Beginning </h3>
             <h5> The best adventure for the whole family and in general for those who first come to see a river</h5>
         </section>
         <section class="level-two">
-            <img class="card-img1" src="images/level3.jpg" alt="tent in mountains">
-            <h3>Intermedio -Rapids - Level III - IV</h3>
+            <img class="card-img1" src="images/level3_400x400.jpg" alt="tent in mountains">
+            <h3>Intermedio - Rapids - Level III - IV</h3>
             <h5> More adventures for the people that want have more experience in this beautiful adventure</h5>
         </section>
         <section class="level-three1">
-            <img class="card-img1" src="images/level5.jpg" alt="rafting boat">
+            <img class="card-img1" src="images/level5_400x400.jpg" alt="rafting boat">
             <h3> Experts- Rapids - Level V - VI</h3>
             <h5> For more adrenaline, the upper levels are the best, try it and you will not want to leave the river.</h5>
             
