--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -4,49 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peronal Site</title>
+    <title>NyM Travel Agency</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
+    <h3>7866654321 | 511987801008</h3>
     <header>
-        <h2>7866654321 | 511987801008</h2>
+        <a class="logo" href="#" >
+            <img src="images/logo.png" alt="NyM Travel">
+            <!--- <h2 class="nym"> NyM Travel </h2>  --->
+        </a>
+        <div class="position">
+            <a href="#" class="nav-link">Home |</a>
+            <a href="#" class="nav-link">Get to Know Peru |</a>
+            <a href="#" class="nav-link">Internationals Destinations</a>
+        </div>
     </header>
-    <div class="container">
-        <header class="header">
-            <img src="" alt="NyM Travel">
-        </header>
-
-        <header id="logo">
-            <a id="logo_link" href="index.html">
-                <img class=logo"" src="#" alt="#">
-            </a>
-            <nav>
-                <a href="index.html" target="_blank">Home</a>
-                <a href="Peru">Get to Know Peru</a>
-                <a href="Internationals">Internationals Destinations</a>
-            </nav>
-        </header>
-        <div  class="notice">
-            Anoter post
+    <div id="hero">
+        <div id="hero-box">
+            <img id="hero-img" src="images/machu-picchu.jpg" alt="People enjoying this beatiful view ">
         </div>
-        <div  class="notice">
-            Anoter post
-        </div>
-        <div  class="notice">
-            Anoter post
-        </div>
-        <div  class="notice">
-            Anoter post
-        </div>
-        <div  class="notice">
-            Anoter post
-        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Beautiful Places</h1>
+            <h2>I will never forget this place</h2>
+            <div class='button-box'>
+                <a class='book' href="#">Book Now</a>
+            </div>   
+        </section>
     </div>
+    <main>
+        </div>
+        <div  class="notice">
+            Anoter post
+        </div>
+        <div  class="notice">
+            Anoter post
+        </div>
+        <div  class="notice">
+            Anoter post
+        </div>
+        <div  class="notice">
+            Anoter post
+        </div>
+        <div  class="notice">
+            Anoter post
+        </div>
+    </main>
+    
 <footer>
-    <p>Dry Oar &copy; 2022 - Martin Pasco</p>
-    <p><a href="site-plan-rafting.html" target="_blank">Site Plan</a></p>
-    <p><a href="contactus.html" target="_blank">Contact Us</a></p>
+    <p>NyM Travel &copy; 2022 - Martin Pasco</p>
+    <p><a href="#" target="_blank">Home</a>Get to Know Peru</p>
+    <p><a href="#" target="_blank">Internationals Destinations</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
