--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -33,8 +33,42 @@
             </div>   
         </section>
     </div>
-    <main class="home-grid">
-            <section class="rivers-card">
+    <main id="middle">
+        <div  class="passport">
+            <img class="img" src="images/europa.png" alt="passport">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+        </div>
+        <div  class="tickets">
+            <img class="img" src="images/Egypt.png" alt="tickets">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi dolor molestiae eveniet debitis excepturi dolorum possimus accusamus placeat suscipit. Iure natus nihil at molestiae eum? Eveniet maxime in quis veritatis delectus perferendis aperiam voluptas, quisquam id distinctio ullam iste quae quasi eius harum asperiores, sed alias exercitationem nemo quas.</p>  
+        </div>
+        <div class="cusco">
+            <img class="img" src="images/europa.png" alt="cusco">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi pariatur eum odit iure eius repellat facere necessitatibus error, recusandae, qui debitis! Dolorum cum expedita voluptatibus laborum velit dolorem fugiat itaque non numquam, blanditiis rerum praesentium corrupti debitis eaque inventore iure libero quos eligendi repellendus repudiandae nesciunt sint molestias! Consectetur!</p>
+        </div>
+        <div class="kuelap">
+            <img class="img" src="images/Egypt.png" alt="kuelap">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+        </div>
+        <div class="Internationals1">
+            <img class="img" class="img" src="images/Egypt.png" alt="passport">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+        </div>
+        <div class="Internationals2">
+            <img class="img" src="images/europa.png" alt="tickets">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>  
+        </div>
+        <div class="Internationals3">
+            <img  class="img"src="images/Egypt.png" alt="cusco">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+        </div>
+        <div class="Internationals4">
+            <img class="img" src="images/europa.png" alt="kuelap">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+        </div>
+
+    </main>    
+           <!---  <section class="rivers-card">
                 <img class="card-img" src="images/rivers.jpg" alt="river in forest">
                 <img class="icon" src="images/river_icon.png" alt="river icon">
                 <h2>Rivers</h2>
@@ -73,7 +107,7 @@
         <div  class="notice">
             Anoter post
         </div>
-    </main>
+    </main>   -->
     
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
