--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -13,7 +13,6 @@
     <header>
         <a class="logo" href="#" >
             <img src="images/logo.png" alt="NyM Travel">
-            <!--- <h2 class="nym"> NyM Travel </h2>  --->
         </a>
         <div class="position">
             <a href="#" class="nav-link">Home |</a>
@@ -51,7 +50,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
         <div class="Internationals1">
-            <img class="img" class="img" src="images/Egypt.png" alt="passport">
+            <img class="img" src="images/Egypt.png" alt="passport">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
         <div class="Internationals2">
@@ -59,7 +58,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>  
         </div>
         <div class="Internationals3">
-            <img  class="img"src="images/Egypt.png" alt="cusco">
+            <img  class="img" src="images/Egypt.png"  alt="cusco">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
         <div class="Internationals4">
