--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -49,22 +49,15 @@
             <img class="img" src="images/kuelap.png" alt="kuelap">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
-        <div class="Internationals1">
-            <img class="img" src="images/Egypt.png" alt="passport">
+
+        <div class="local">
+            <img class="img1" src="images/kuelap1.webp" alt="passport">
+            
+        </div>
+        <div class="text">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
-        <div class="Internationals2">
-            <img class="img" src="images/europa.png" alt="tickets">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>  
-        </div>
-        <div class="Internationals3">
-            <img  class="img" src="images/Egypt.png"  alt="cusco">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
-        </div>
-        <div class="Internationals4">
-            <img class="img" src="images/europa.png" alt="kuelap">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
-        </div>
+        
 
     </main>    
 <footer>
