--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -55,6 +55,7 @@
             
         </div>
         <div class="text">
+            <h2>Kuelap<h2>  
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
         </div>
         
@@ -62,7 +63,7 @@
     </main>    
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
-    <p><a href="index.html" target="_blank">Home</a>Get to Know Peru</p>
+    <p><a href="index.html" target="_blank">Home</a></p>
     <p><a href="peru.html" target="_blank">Internationals Destinations</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
