--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -63,7 +63,7 @@
     </main>    
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
-    <p><a href="index.html" target="_blank">Home</a></p>
+    <p><a href="index.html" target="_blank">Get to Know Peru</a></p>
     <p><a href="peru.html" target="_blank">Internationals Destinations</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
