--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -35,19 +35,19 @@
     <main id="middle">
         <div  class="passport">
             <img class="img" src="images/passport.png" alt="passport">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ea commodi cumque at accusamus ad veritatis sint obcaecati, quisquam aperiam voluptas? Blanditiis sint dolorum ipsa. Neque magni unde quaerat officiis?</p>
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eligendi dolor molestiae eveniet debitis excepturi dolorum possimus accusamus placeat suscipit. Iure natus nihil at molestiae eum? Eveniet maxime in quis veritatis delectus perferendis aperiam voluptas, quisquam id distinctio ullam iste quae quasi eius harum asperiores, sed alias exercitationem nemo quas.</p>  
+            <p>.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur cum earum voluptates nulla error velit quam, placeat quibusdam praesentium distinctio magni eveniet autem id, esse obcaecati, cumque quae facere!</p>  
         </div>
         <div class="cusco">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil animi pariatur eum odit iure eius repellat facere necessitatibus error, recusandae, qui debitis! Dolorum cum expedita voluptatibus laborum velit dolorem fugiat itaque non numquam, blanditiis rerum praesentium corrupti debitis eaque inventore iure libero quos eligendi repellendus repudiandae nesciunt sint molestias! Consectetur!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur cum earum voluptates nulla error velit quam, placeat quibusdam praesentium distinctio magni eveniet autem id, esse obcaecati, cumque quae facere!</p>
         </div>
         <div class="kuelap">
             <img class="img" src="images/kuelap.png" alt="kuelap">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur cum earum voluptates nulla error velit quam, placeat quibusdam praesentium distinctio magni eveniet autem id, esse obcaecati, cumque quae facere!</p>
         </div>
         <div class="Internationals1">
             <img class="img" src="images/Egypt.png" alt="passport">
