--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Dry Oar Boating | Home</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/contactus.css">
     <style>
         form {
             /* Center the form on the page */
@@ -73,21 +74,7 @@
                 between the labels and their text fields */
             margin-left: 0.5em;
             }
-    </style>
-    #feedback {
-        background-color: antiquewhite;
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        padding: .5em;
-        /* make this element invisible until we are ready for it */
-        display: none;      
-    }
-    .moveDown {
-        margin-top: 3em;
-    }
-               
+    </style>             
 </head>
 <body>
     <header>
