--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -16,7 +16,7 @@
             padding: 1em;
             border: 2px solid rgb(14, 149, 145);
             border-radius: 1em;
-            color: #999; 
+            color: #c8a415; 
         }
     
         ul {
@@ -75,7 +75,7 @@
             /* This extra margin represent roughly the same space as the space
                 between the labels and their text fields */
             margin-left: 0.5em;
-            background-color: rgb(156, 194, 193);
+            background-color: #c8a415;
         }
     </style>             
 </head>
