--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,10 +14,10 @@
                 <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
-                <a href="index.html" target="_blank">Home</a>
+                <!-- <a href="index.html" target="_blank">Home</a>  -->
                 <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
-                <a href="#" target="#">Contact Us</a>
+                <a href="contactus.html" target="#">Contact Us</a>
             </nav>
         </div>
     </header>
