--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -17,7 +17,7 @@
                 <a href="index.html" target="_blank">Home</a>
                 <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
-                <a href="#" target="#">Contact Us</a>
+                <a href="contactus.html" target="#">Contact Us</a>
             </nav>
         </div>
     </header>
