--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -16,7 +16,7 @@
             padding: 1em;
             border: 2px solid rgb(14, 149, 145);
             border-radius: 1em;
-            color: #c8a415; 
+            color: #d9c2a3; 
         }
     
         ul {
@@ -75,7 +75,8 @@
             /* This extra margin represent roughly the same space as the space
                 between the labels and their text fields */
             margin-left: 0.5em;
-            background-color: #c8a415;
+            border-color: rgb(14, 149, 145);
+            background-color: #f4d65f;
         }
     </style>             
 </head>
