--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -76,7 +76,7 @@
                 between the labels and their text fields */
             margin-left: 0.5em;
             border-color: rgb(14, 149, 145);
-            background-color: #f4d65f;
+            background-color: #d9c2a3;
         }
     </style>             
 </head>
