--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -87,7 +87,7 @@
                 <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
-                <a href="index.html" >Home</a>
+                <a href="index.html" target="#">Home</a>
                 <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
                 <a href="contactus.html" target="#">Contact Us</a>
