--- a/aboutme/personalsite/peru.html
+++ b/aboutme/personalsite/peru.html
@@ -17,7 +17,7 @@
         <div class="position">
             <a href="index.html" class="nav-link">Home |</a>
             <a href="peru.html" class="nav-link">Get to Know Peru |</a>
-            <a href="#" class="nav-link">Internationals Destinations</a>
+            <a href="international.html" class="nav-link">Internationals Destinations</a>
         </div>
     </header>
     <div id="hero">
@@ -64,7 +64,7 @@
 <footer>
     <p>NyM Travel &copy; 2022 - Martin Pasco</p>
     <p><a href="index.html" target="_blank">Home</a></p>
-    <p><a href="#" target="_blank">Internationals Destinations</a></p>
+    <p><a href="international.html" target="_blank">Internationals Destinations</a></p>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
