--- a/aboutme/personalsite/international.html
+++ b/aboutme/personalsite/international.html
@@ -32,7 +32,7 @@
             </div>   
         </section>
     </div>
-    <main id="middle">
+    <main id="article">
         <article>
             <img src="" alt="">
             <h4></h4>
