--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -35,27 +35,38 @@
     <main id="middle">
         <div  class="passport">
             <img class="img" src="images/passport.png" alt="passport">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum ea commodi cumque at accusamus ad veritatis sint obcaecati, quisquam aperiam voluptas? Blanditiis sint dolorum ipsa. Neque magni unde quaerat officiis?</p>
+            <p>Through the information received by you, we will be able to contact you to find out what are the things that are in your possession, either to begin with, the passport, which is one of the most important elements of our work, we will see its validation time and If its expiration is close, we will give you some (advice) to be able to process them.
+            We give it the necessary emphasis since it is the only document that will help us to know more about your data and avoid any inconvenience in the whole process that you will win with us.</p>
         </div>
         <div  class="tickets">
             <img class="img" src="images/tickets.png" alt="tickets">
-            <p>.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur cum earum voluptates nulla error velit quam, placeat quibusdam praesentium distinctio magni eveniet autem id, esse obcaecati, cumque quae facere!</p>  
+            <p>Tickets are an essential art in our work and looking for the best for you we need to work with all the series that you deserve, knowing all the possible information about your personal data, as well as your time availability in order to provide you with the best service, since either with the tickets, the lodging and the areas that you want to know.
+                We have more than 10 years of experience and we would like to serve you with the quality we have.</p>  
         </div>
         <div class="cusco">
             <img class="img" src="images/cusco.jpeg" alt="cusco">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur cum earum voluptates nulla error velit quam, placeat quibusdam praesentium distinctio magni eveniet autem id, esse obcaecati, cumque quae facere!</p>
+            <p>Cusco is one of the 7 new wonders of the world and will not be so for a long time and its infrastructure is totally impressive. Trust us to serve you and you will see that Machu Picchu will be an experience you will never forget.
+            From the arrival at the Cusco Airport you will see that this area is full of beauty and with the best tranquility you will be able to see the city, with a lot of colonial influence and how many more attractions both in the city and its surroundings.</p>
         </div>
         <div class="kuelap">
             <img class="img" src="images/kuelap.png" alt="kuelap">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab consequatur cum earum voluptates nulla error velit quam, placeat quibusdam praesentium distinctio magni eveniet autem id, esse obcaecati, cumque quae facere!</p>
+            <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
+
+            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points.
+                
+            It is estimated that its construction must have begun around the 11th century, coinciding with the flourishing period of the Chachapoyas culture, and its occupation must have ended around the middle of the 16th century. Its colossal walls and its complex interior architecture are evidence of its function as a well-organized population complex, which includes administrative and religious enclosures, ceremonial spaces, and permanent residence.</p>
         </div>
         <div class="Internationals1">
             <img class="img" src="images/Egypt.png" alt="passport">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>
+            <p>Ancient Egypt or Ancient Egypt was a civilization of Antiquity, which originated along the middle and lower reaches of the Nile River, whose history spans more than three millennia. It is considered one of the most important of humanity.1 The original name of the country, especially during the Old Kingdom, was Kemet (Km.t), 'black land', due to the color of the fertilizing silt that covered it during the regular annual flooding the valley that lies on the banks of the Nile River, as opposed to Deshret (dsr.t, 'red earth'), by the sand of the Sahara desert, which covers most of the Egyptian territory.</p>
         </div>
         <div class="Internationals2">
             <img class="img" src="images/europa.png" alt="tickets">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut perspiciatis labore velit possimus officiis asperiores maiores. Eveniet ad id labore exercitationem possimus? Illum quasi qui sint suscipit rem aliquam non, obcaecati eos molestias fuga mollitia aperiam et ratione dignissimos cum nihil exercitationem, velit odit ut repellat, reiciendis architecto. Enim, repellat.!</p>  
+            <p>Sightseeing in Europe is a fascinating experience where you can discover numerous tourist attractions, an indescribable historical and cultural legacy, and unique gastronomy in the world.
+                The European continent stretches geographically from Asia to the Atlantic Ocean, and from Africa to the Arctic Sea.
+                Lying on the northern side of the Mediterranean, Europe is bounded by the Atlantic Ocean on its western border and by both the Norwegian Sea and the Barents Sea on its northern axis. Many of the world's most visited and developed countries are in Europe, grouped together as the Baltics, Great Britain and Ireland, the Caucasus, Central Europe, France, Iberia, Italy and Scandinavia, as well as Cyprus, Greece and Turkey and Belarus, part from Russia and Ukraine.
+                Europe covers an area of ​​approximately 10.4 million square kilometers and enjoys an annual number of visitors in the region of 500 million. Many European countries are famous for their rich cultural heritage, spectacular man-made sights, and modern, safe, and reliable transportation. Knowing Europe is visiting its museums, great avenues, enjoying its educated and refined people. Travel between the canals and waterways of Amsterdam, the Eiffel Tower in Paris, the Colosseum in Rome, the Greek temples of Ephesus and Athens, Buckingham Palace in London, and Saint Paul's Cathedral and Plaza Mayor in Madrid
+            </p>  
         </div>
         <div class="Internationals3">
             <img  class="img" src="images/Egypt.png"  alt="cusco">
