--- a/aboutme/personalsite/index.html
+++ b/aboutme/personalsite/index.html
@@ -52,9 +52,7 @@
             <img class="img" src="images/kuelap.png" alt="kuelap">
             <p>Kuélap, or Cuélap, is an important pre-Inca archaeological site located in the northeastern Andes of Peru, in the Province of Luya. It was built by the Chachapoyas culture.
 
-            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points.
-                
-            It is estimated that its construction must have begun around the 11th century, coinciding with the flourishing period of the Chachapoyas culture, and its occupation must have ended around the middle of the 16th century. Its colossal walls and its complex interior architecture are evidence of its function as a well-organized population complex, which includes administrative and religious enclosures, ceremonial spaces, and permanent residence.</p>
+            It forms a large stone architectural complex characterized by its monumental condition, with a large artificial platform, oriented from south to north, set on the calcareous rock ridge at the top of Cerro Barreta (at 3000 m.a.s.l.). The platform extends for almost 600 meters and is surrounded by a wall that is 19 meters high at some points.</p>
         </div>
         <div class="Internationals1">
             <img class="img" src="images/Egypt.png" alt="passport">
